[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkbhx_predictor"
version = "0.1.0"
description = "Site-specific hydrogen-bond basicity (pKBHX) predictor using Vmin workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "setuptools",
    # rdkit and psi4 should be installed via conda
]

[project.scripts]
pkbhx-predict = "pkbhx.cli:main"

[tool.setuptools.packages.find]
include = ["pkbhx*"]
exclude = ["checkpoints*", "tests*"]
